
pixmapsdir = $(datadir)/$(PACKAGE)/pixmaps
pixmaps_DATA =				\
		blueradio.png		\
		blueradio.svg		\
		btdevice-audiovideo.png	\
		btdevice-computer.png	\
		btdevice-imaging.png	\
		btdevice-lan.png	\
		btdevice-misc.png	\
		btdevice-peripheral.png	\
		btdevice-phone.png	\
		frame1.png		\
		frame2.png		\
		frame3.png		\
		frame4.png		\
		frame5.png		\
		frame6.png

icondir = $(datadir)/pixmaps
icon_DATA = blueradio-48.png

EXTRA_DIST = $(pixmaps_DATA) $(icon_DATA) blueradio.xcf
